--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -602,14 +602,6 @@ video {
   bottom: 3.5rem;
 }
 
-.tw-bottom-2 {
-  bottom: 0.5rem;
-}
-
-.tw-bottom-\[50px\] {
-  bottom: 50px;
-}
-
 .tw-left-0 {
   left: 0px;
 }
@@ -654,10 +646,6 @@ video {
   top: 0px;
 }
 
-.tw-top-1 {
-  top: 0.25rem;
-}
-
 .tw-top-1\/2 {
   top: 50%;
 }
@@ -682,10 +670,6 @@ video {
   top: 10rem;
 }
 
-.tw-top-\[0\%\] {
-  top: 0%;
-}
-
 .tw-top-\[10\%\] {
   top: 10%;
 }
@@ -694,24 +678,12 @@ video {
   top: 120px;
 }
 
-.tw-top-\[20\%\] {
-  top: 20%;
-}
-
-.tw-top-\[5\%\] {
-  top: 5%;
-}
-
 .tw-top-\[50\%\] {
   top: 50%;
 }
 
 .tw--z-10 {
   z-index: -10;
-}
-
-.tw-z-10 {
-  z-index: 10;
 }
 
 .tw-z-20 {
@@ -724,22 +696,6 @@ video {
 
 .tw-z-50 {
   z-index: 50;
-}
-
-.tw-z-\[1\] {
-  z-index: 1;
-}
-
-.tw-z-\[2\] {
-  z-index: 2;
-}
-
-.tw-z-\[3\] {
-  z-index: 3;
-}
-
-.tw-z-\[4\] {
-  z-index: 4;
 }
 
 .tw-col-span-1 {
@@ -869,6 +825,10 @@ video {
   margin-top: 2rem;
 }
 
+.tw-mt-\[-8px\] {
+  margin-top: -8px;
+}
+
 .tw-mt-\[5\%\] {
   margin-top: 5%;
 }
@@ -893,10 +853,6 @@ video {
 
 .tw-block {
   display: block;
-}
-
-.tw-inline {
-  display: inline;
 }
 
 .tw-flex {
@@ -975,14 +931,6 @@ video {
   height: 180px;
 }
 
-.tw-h-\[200px\] {
-  height: 200px;
-}
-
-.tw-h-\[20px\] {
-  height: 20px;
-}
-
 .tw-h-\[240px\] {
   height: 240px;
 }
@@ -993,10 +941,6 @@ video {
 
 .tw-h-\[400px\] {
   height: 400px;
-}
-
-.tw-h-\[50px\] {
-  height: 50px;
 }
 
 .tw-h-\[540px\] {
@@ -1032,10 +976,6 @@ video {
   max-height: 400px;
 }
 
-.tw-max-h-\[550px\] {
-  max-height: 550px;
-}
-
 .tw-max-h-\[90\%\] {
   max-height: 90%;
 }
@@ -1065,16 +1005,8 @@ video {
   min-height: 300px;
 }
 
-.tw-min-h-\[450px\] {
-  min-height: 450px;
-}
-
 .tw-min-h-\[60vh\] {
   min-height: 60vh;
-}
-
-.tw-min-h-\[80px\] {
-  min-height: 80px;
 }
 
 .tw-min-h-\[90vh\] {
@@ -1095,10 +1027,6 @@ video {
 
 .\!tw-w-full {
   width: 100% !important;
-}
-
-.tw-w-10 {
-  width: 2.5rem;
 }
 
 .tw-w-20 {
@@ -1149,10 +1077,6 @@ video {
   width: 200px;
 }
 
-.tw-w-\[20px\] {
-  width: 20px;
-}
-
 .tw-w-\[250px\] {
   width: 250px;
 }
@@ -1165,8 +1089,8 @@ video {
   width: 450px;
 }
 
-.tw-w-\[90\%\] {
-  width: 90%;
+.tw-w-auto {
+  width: auto;
 }
 
 .tw-w-fit {
@@ -1181,14 +1105,6 @@ video {
 .tw-w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.tw-min-w-\[140px\] {
-  min-width: 140px;
-}
-
-.tw-min-w-\[250px\] {
-  min-width: 250px;
 }
 
 .tw-min-w-\[320px\] {
@@ -1221,10 +1137,6 @@ video {
 
 .tw-max-w-\[1000px\] {
   max-width: 1000px;
-}
-
-.tw-max-w-\[100px\] {
-  max-width: 100px;
 }
 
 .tw-max-w-\[100vw\] {
@@ -1362,6 +1274,14 @@ video {
           user-select: none;
 }
 
+.tw-list-inside {
+  list-style-position: inside;
+}
+
+.tw-list-disc {
+  list-style-type: disc;
+}
+
 .tw-auto-rows-auto {
   grid-auto-rows: auto;
 }
@@ -1466,12 +1386,6 @@ video {
   gap: 20px;
 }
 
-.tw--space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(-1rem * var(--tw-space-x-reverse));
-  margin-left: calc(-1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .tw-space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1560,10 +1474,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.tw-rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .tw-rounded-xl {
   border-radius: 0.75rem;
 }
@@ -1616,10 +1526,6 @@ video {
   border-style: dashed;
 }
 
-.tw-border-none {
-  border-style: none;
-}
-
 .\!tw-border-black {
   --tw-border-opacity: 1 !important;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1)) !important;
@@ -1663,11 +1569,6 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
-.tw-border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity, 1));
-}
-
 .tw-border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
@@ -1682,18 +1583,8 @@ video {
   border-color: transparent;
 }
 
-.tw-border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
 .tw-border-t-transparent {
   border-top-color: transparent;
-}
-
-.\!tw-bg-\[\#6366f1\] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .\!tw-bg-transparent {
@@ -1734,11 +1625,6 @@ video {
   background-color: rgb(246 247 251 / var(--tw-bg-opacity, 1));
 }
 
-.tw-bg-\[\#f3f4f6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
 .tw-bg-\[\#f6f7fb\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 247 251 / var(--tw-bg-opacity, 1));
@@ -1747,10 +1633,6 @@ video {
 .tw-bg-\[\#fcfcfc\] {
   --tw-bg-opacity: 1;
   background-color: rgb(252 252 252 / var(--tw-bg-opacity, 1));
-}
-
-.tw-bg-\[\#ffffff6a\] {
-  background-color: #ffffff6a;
 }
 
 .tw-bg-black {
@@ -1775,11 +1657,6 @@ video {
 .tw-bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
-}
-
-.tw-bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-green-600 {
@@ -1893,14 +1770,6 @@ video {
      object-fit: cover;
 }
 
-.\!tw-p-2 {
-  padding: 0.5rem !important;
-}
-
-.\!tw-p-4 {
-  padding: 1rem !important;
-}
-
 .tw-p-1 {
   padding: 0.25rem;
 }
@@ -1937,21 +1806,8 @@ video {
   padding: 2%;
 }
 
-.tw-p-\[2px\] {
-  padding: 2px;
-}
-
-.tw-p-\[4px\] {
-  padding: 4px;
-}
-
 .tw-p-\[5\%\] {
   padding: 5%;
-}
-
-.\!tw-px-3 {
-  padding-left: 0.75rem !important;
-  padding-right: 0.75rem !important;
 }
 
 .\!tw-py-4 {
@@ -2195,11 +2051,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
 }
 
-.\!tw-text-white {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
-}
-
 .tw-text-\[\#3b82f6\] {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
@@ -2287,16 +2138,8 @@ video {
   opacity: 1;
 }
 
-.tw-opacity-20 {
-  opacity: 0.2;
-}
-
 .tw-opacity-50 {
   opacity: 0.5;
-}
-
-.tw-opacity-80 {
-  opacity: 0.8;
 }
 
 .tw-shadow-\[0_2px_8px_rgba\(233\,75\,100\,0\.25\)\] {
@@ -2335,12 +2178,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.tw-shadow-none {
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .tw-shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -2352,20 +2189,9 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.\!tw-outline-none {
-  outline: 2px solid transparent !important;
-  outline-offset: 2px !important;
-}
-
 .tw-outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.tw-ring-0 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .tw-ring-1 {
@@ -2390,12 +2216,6 @@ video {
 .tw-grayscale {
   --tw-grayscale: grayscale(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.tw-backdrop-blur-lg {
-  --tw-backdrop-blur: blur(16px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .tw-backdrop-blur-xl {
@@ -2517,11 +2337,6 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
-.hover\:\!tw-bg-black:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
-}
-
 .hover\:tw-bg-\[\#2563eb\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
@@ -2560,11 +2375,6 @@ video {
   background-color: rgb(243 244 246 / 0.5);
 }
 
-.hover\:tw-bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:tw-bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
@@ -2588,11 +2398,6 @@ video {
 .hover\:tw-bg-red-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:\!tw-text-white:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
 }
 
 .hover\:tw-text-\[\#6366f1\]:hover {
@@ -2685,12 +2490,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.tw-group:hover .group-hover\:tw-scale-100 {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .tw-group:hover .group-hover\:tw-scale-105 {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -2745,11 +2544,6 @@ video {
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
 }
 
-:-moz-any(.firefox\:tw-bg-white) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:\!tw-border-gray-300:is(.tw-dark *) {
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1)) !important;
@@ -2763,11 +2557,6 @@ video {
 .dark\:tw-border-\[\#1f2123\]:is(.tw-dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(31 33 35 / var(--tw-border-opacity, 1));
-}
-
-.dark\:tw-border-\[\#36393c\]:is(.tw-dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(54 57 60 / var(--tw-border-opacity, 1));
 }
 
 .dark\:tw-border-\[\#595858\]:is(.tw-dark *) {
@@ -2804,10 +2593,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.dark\:tw-bg-\[\#000000b4\]:is(.tw-dark *) {
-  background-color: #000000b4;
-}
-
 .dark\:tw-bg-\[\#080808\]:is(.tw-dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(8 8 8 / var(--tw-bg-opacity, 1));
@@ -2821,11 +2606,6 @@ video {
 .dark\:tw-bg-\[\#171717\]:is(.tw-dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:tw-bg-\[\#17181B\]:is(.tw-dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:tw-bg-\[\#17181b\]:is(.tw-dark *) {
@@ -2886,24 +2666,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.dark\:tw-placeholder-gray-300:is(.tw-dark *)::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-placeholder-opacity, 1));
-}
-
-.dark\:tw-placeholder-gray-300:is(.tw-dark *)::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-placeholder-opacity, 1));
-}
-
-.dark\:tw-placeholder-opacity-60:is(.tw-dark *)::-moz-placeholder {
-  --tw-placeholder-opacity: 0.6;
-}
-
-.dark\:tw-placeholder-opacity-60:is(.tw-dark *)::placeholder {
-  --tw-placeholder-opacity: 0.6;
-}
-
 .dark\:tw-shadow-\[0_4px_20px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]:is(.tw-dark *) {
   --tw-shadow: 0 4px 20px rgba(0,0,0,0.3);
   --tw-shadow-colored: 0 4px 20px var(--tw-shadow-color);
@@ -2930,15 +2692,6 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.dark\:hover\:\!tw-bg-white:hover:is(.tw-dark *) {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
-}
-
-.dark\:hover\:tw-bg-\[\#2d2d2ddb\]:hover:is(.tw-dark *) {
-  background-color: #2d2d2ddb;
-}
-
 .dark\:hover\:tw-bg-gray-700:hover:is(.tw-dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
@@ -2951,11 +2704,6 @@ video {
 
 .dark\:hover\:tw-bg-gray-800\/50:hover:is(.tw-dark *) {
   background-color: rgb(31 41 55 / 0.5);
-}
-
-.dark\:hover\:\!tw-text-black:hover:is(.tw-dark *) {
-  --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
 }
 
 .dark\:focus\:tw-border-\[\#3b82f6\]:focus:is(.tw-dark *) {
@@ -2992,28 +2740,8 @@ video {
     position: fixed;
   }
 
-  .max-lg\:tw-absolute {
-    position: absolute;
-  }
-
-  .max-lg\:tw-bottom-\[unset\] {
-    bottom: unset;
-  }
-
   .max-lg\:tw-top-0 {
     top: 0px;
-  }
-
-  .max-lg\:tw-top-\[105\%\] {
-    top: 105%;
-  }
-
-  .max-lg\:tw-top-\[30\%\] {
-    top: 30%;
-  }
-
-  .max-lg\:tw-mt-12 {
-    margin-top: 3rem;
   }
 
   .max-lg\:tw-mt-\[100px\] {
@@ -3024,21 +2752,9 @@ video {
     margin-top: 30px;
   }
 
-  .max-lg\:tw-hidden {
-    display: none;
-  }
-
   .max-lg\:\!tw-h-fit {
     height: -moz-fit-content !important;
     height: fit-content !important;
-  }
-
-  .max-lg\:tw-h-0 {
-    height: 0px;
-  }
-
-  .max-lg\:tw-h-\[450px\] {
-    height: 450px;
   }
 
   .max-lg\:tw-h-auto {
@@ -3048,10 +2764,6 @@ video {
   .max-lg\:tw-h-max {
     height: -moz-max-content;
     height: max-content;
-  }
-
-  .max-lg\:tw-max-h-\[80\%\] {
-    max-height: 80%;
   }
 
   .max-lg\:tw-max-h-fit {
@@ -3071,10 +2783,6 @@ video {
     width: 160px !important;
   }
 
-  .max-lg\:tw-w-0 {
-    width: 0px;
-  }
-
   .max-lg\:tw-w-\[320px\] {
     width: 320px;
   }
@@ -3087,18 +2795,8 @@ video {
     max-width: 320px;
   }
 
-  .max-lg\:tw-max-w-fit {
-    max-width: -moz-fit-content;
-    max-width: fit-content;
-  }
-
   .max-lg\:tw-max-w-full {
     max-width: 100%;
-  }
-
-  .max-lg\:tw--translate-x-1\/2 {
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .max-lg\:tw-flex-col {
@@ -3171,10 +2869,6 @@ video {
 }
 
 @media not all and (min-width: 768px) {
-  .max-md\:tw-mt-3 {
-    margin-top: 0.75rem;
-  }
-
   .max-md\:tw-hidden {
     display: none;
   }
@@ -3263,20 +2957,12 @@ video {
     width: 50%;
   }
 
-  .md\:tw-w-full {
-    width: 100%;
-  }
-
   .md\:tw-grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:tw-fixed {
-    position: fixed;
-  }
-
   .lg\:tw-sticky {
     position: sticky;
   }
@@ -3289,10 +2975,6 @@ video {
     top: 20%;
   }
 
-  .lg\:tw-top-\[80px\] {
-    top: 80px;
-  }
-
   .lg\:tw-mx-4 {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -3303,32 +2985,12 @@ video {
     margin-right: auto;
   }
 
-  .lg\:tw-block {
-    display: block;
-  }
-
   .lg\:tw-hidden {
     display: none;
   }
 
-  .lg\:tw-h-\[450px\] {
-    height: 450px;
-  }
-
-  .lg\:tw-h-\[650px\] {
-    height: 650px;
-  }
-
-  .lg\:tw-w-\[1024px\] {
-    width: 1024px;
-  }
-
   .lg\:tw-max-w-5xl {
     max-width: 64rem;
-  }
-
-  .lg\:tw-max-w-\[1000px\] {
-    max-width: 1000px;
   }
 
   .lg\:tw--translate-x-1\/2 {
