--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -618,10 +618,6 @@ video {
   left: 0.875rem;
 }
 
-.tw-left-\[50\%\] {
-  left: 50%;
-}
-
 .tw-right-0 {
   right: 0px;
 }
@@ -674,10 +670,6 @@ video {
   top: 120px;
 }
 
-.tw-top-\[50\%\] {
-  top: 50%;
-}
-
 .tw-z-20 {
   z-index: 20;
 }
@@ -700,6 +692,11 @@ video {
 
 .tw-col-span-full {
   grid-column: 1 / -1;
+}
+
+.tw-mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .tw-mx-auto {
@@ -765,10 +762,6 @@ video {
   margin-right: 1.5rem;
 }
 
-.tw-mr-auto {
-  margin-right: auto;
-}
-
 .tw-mt-1 {
   margin-top: 0.25rem;
 }
@@ -783,10 +776,6 @@ video {
 
 .tw-mt-2 {
   margin-top: 0.5rem;
-}
-
-.tw-mt-20 {
-  margin-top: 5rem;
 }
 
 .tw-mt-3 {
@@ -907,10 +896,6 @@ video {
   height: 300px;
 }
 
-.tw-h-\[30px\] {
-  height: 30px;
-}
-
 .tw-h-\[400px\] {
   height: 400px;
 }
@@ -921,10 +906,6 @@ video {
 
 .tw-h-\[60px\] {
   height: 60px;
-}
-
-.tw-h-\[90vh\] {
-  height: 90vh;
 }
 
 .tw-h-auto {
@@ -944,16 +925,8 @@ video {
   height: 100vh;
 }
 
-.tw-max-h-\[90\%\] {
-  max-height: 90%;
-}
-
 .tw-max-h-\[calc\(100vh-160px\)\] {
   max-height: calc(100vh - 160px);
-}
-
-.tw-max-h-full {
-  max-height: 100%;
 }
 
 .tw-min-h-\[100vh\] {
@@ -968,16 +941,8 @@ video {
   min-height: 300px;
 }
 
-.tw-min-h-\[60vh\] {
-  min-height: 60vh;
-}
-
 .tw-min-h-\[90vh\] {
   min-height: 90vh;
-}
-
-.tw-min-h-full {
-  min-height: 100%;
 }
 
 .tw-min-h-screen {
@@ -990,6 +955,18 @@ video {
 
 .\!tw-w-full {
   width: 100% !important;
+}
+
+.tw-w-1 {
+  width: 0.25rem;
+}
+
+.tw-w-1\/2 {
+  width: 50%;
+}
+
+.tw-w-10 {
+  width: 2.5rem;
 }
 
 .tw-w-2\/5 {
@@ -1044,6 +1021,10 @@ video {
   width: 250px;
 }
 
+.tw-w-\[300px\] {
+  width: 300px;
+}
+
 .tw-w-\[350px\] {
   width: 350px;
 }
@@ -1052,13 +1033,12 @@ video {
   width: 533px;
 }
 
-.tw-w-auto {
-  width: auto;
+.tw-w-\[600px\] {
+  width: 600px;
 }
 
-.tw-w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.tw-w-auto {
+  width: auto;
 }
 
 .tw-w-full {
@@ -1068,14 +1048,6 @@ video {
 .tw-w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.tw-min-w-\[320px\] {
-  min-width: 320px;
-}
-
-.tw-min-w-full {
-  min-width: 100%;
 }
 
 .tw-max-w-4xl {
@@ -1114,16 +1086,20 @@ video {
   max-width: 150px;
 }
 
+.tw-max-w-\[250px\] {
+  max-width: 250px;
+}
+
 .tw-max-w-\[450px\] {
   max-width: 450px;
 }
 
-.tw-max-w-\[80\%\] {
-  max-width: 80%;
+.tw-max-w-\[700px\] {
+  max-width: 700px;
 }
 
-.tw-max-w-\[80vw\] {
-  max-width: 80vw;
+.tw-max-w-\[80\%\] {
+  max-width: 80%;
 }
 
 .tw-max-w-\[850px\] {
@@ -1136,6 +1112,10 @@ video {
 
 .tw-flex-1 {
   flex: 1 1 0%;
+}
+
+.tw-flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .tw-shrink-0 {
@@ -1161,17 +1141,7 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.tw--translate-x-\[50\%\] {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .tw--translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.tw--translate-y-\[50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1188,18 +1158,6 @@ video {
 
 .tw-rotate-45 {
   --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.tw-scale-0 {
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.tw-scale-100 {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1229,6 +1187,10 @@ video {
 
 .tw-animate-spin {
   animation: tw-spin 1s linear infinite;
+}
+
+.tw-cursor-col-resize {
+  cursor: col-resize;
 }
 
 .tw-cursor-not-allowed {
@@ -1393,10 +1355,6 @@ video {
   overflow: hidden;
 }
 
-.tw-overflow-clip {
-  overflow: clip;
-}
-
 .tw-overflow-x-auto {
   overflow-x: auto;
 }
@@ -1523,6 +1481,11 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
+.tw-border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
+}
+
 .tw-border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
@@ -1550,23 +1513,9 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.tw-bg-\[\#000000af\] {
-  background-color: #000000af;
-}
-
-.tw-bg-\[\#121212\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 18 18 / var(--tw-bg-opacity, 1));
-}
-
 .tw-bg-\[\#17181B\] {
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 27 / var(--tw-bg-opacity, 1));
-}
-
-.tw-bg-\[\#1E1E1E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 30 30 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-\[\#1f1f1f\] {
@@ -1667,12 +1616,6 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
-.tw-from-\[\#4F8CFF\] {
-  --tw-gradient-from: #4F8CFF var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(79 140 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .tw-from-black\/70 {
   --tw-gradient-from: rgb(0 0 0 / 0.7) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
@@ -1712,10 +1655,6 @@ video {
 .tw-via-orange-500 {
   --tw-gradient-to: rgb(249 115 22 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #f97316 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.tw-to-\[\#2F69FF\] {
-  --tw-gradient-to: #2F69FF var(--tw-gradient-to-position);
 }
 
 .tw-to-blue-400 {
@@ -1826,11 +1765,6 @@ video {
 .tw-px-\[3\%\] {
   padding-left: 3%;
   padding-right: 3%;
-}
-
-.tw-px-\[5\%\] {
-  padding-left: 5%;
-  padding-right: 5%;
 }
 
 .tw-py-1 {
@@ -2052,6 +1986,11 @@ video {
   color: rgb(243 244 246 / var(--tw-text-opacity, 1));
 }
 
+.tw-text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+}
+
 .tw-text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
@@ -2108,10 +2047,6 @@ video {
 
 .tw-opacity-10 {
   opacity: 0.1;
-}
-
-.tw-opacity-100 {
-  opacity: 1;
 }
 
 .tw-opacity-50 {
@@ -2189,11 +2124,6 @@ video {
   --tw-ring-color: rgb(255 255 255 / 0.5);
 }
 
-.tw-grayscale {
-  --tw-grayscale: grayscale(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .tw-backdrop-blur-xl {
   --tw-backdrop-blur: blur(24px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -2232,10 +2162,6 @@ video {
 
 .tw-duration-300 {
   transition-duration: 300ms;
-}
-
-.tw-duration-500 {
-  transition-duration: 500ms;
 }
 
 .tw-duration-\[0\.3s\] {
@@ -2304,6 +2230,11 @@ video {
   border-color: rgb(233 75 100 / var(--tw-border-opacity, 1));
 }
 
+.hover\:tw-border-gray-300:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
 .hover\:tw-border-gray-400:hover {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
@@ -2352,6 +2283,11 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:tw-bg-gray-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:tw-bg-gray-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
@@ -2372,20 +2308,6 @@ video {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:tw-bg-gradient-to-l:hover {
-  background-image: linear-gradient(to left, var(--tw-gradient-stops));
-}
-
-.hover\:tw-from-\[\#2F69FF\]:hover {
-  --tw-gradient-from: #2F69FF var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(47 105 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.hover\:tw-to-\[\#4F8CFF\]:hover {
-  --tw-gradient-to: #4F8CFF var(--tw-gradient-to-position);
-}
-
 .hover\:tw-text-\[\#6366f1\]:hover {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity, 1));
@@ -2396,6 +2318,11 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
+.hover\:tw-text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
 .hover\:tw-underline:hover {
   text-decoration-line: underline;
 }
@@ -2403,12 +2330,6 @@ video {
 .hover\:tw-shadow-\[0_4px_12px_rgba\(99\2c 102\2c 241\2c 0\.2\)\]:hover {
   --tw-shadow: 0 4px 12px rgba(99,102,241,0.2);
   --tw-shadow-colored: 0 4px 12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:tw-shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2426,11 +2347,6 @@ video {
 
 .hover\:tw-ring-white\/50:hover {
   --tw-ring-color: rgb(255 255 255 / 0.5);
-}
-
-.hover\:tw-grayscale-0:hover {
-  --tw-grayscale: grayscale(0);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .focus\:tw-border-\[\#3b82f6\]:focus {
@@ -2579,11 +2495,6 @@ video {
   background-color: rgb(8 8 8 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:tw-bg-\[\#16171A\]:is(.tw-dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 23 26 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:tw-bg-\[\#171717\]:is(.tw-dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity, 1));
@@ -2596,10 +2507,6 @@ video {
 
 .dark\:tw-bg-\[\#17181b\]\/90:is(.tw-dark *) {
   background-color: rgb(23 24 27 / 0.9);
-}
-
-.dark\:tw-bg-\[\#80808085\]:is(.tw-dark *) {
-  background-color: #80808085;
 }
 
 .dark\:tw-bg-black:is(.tw-dark *) {
@@ -2695,10 +2602,6 @@ video {
   .max-xl\:tw-flex-col {
     flex-direction: column;
   }
-
-  .max-xl\:tw-place-items-center {
-    place-items: center;
-  }
 }
 
 @media not all and (min-width: 1024px) {
@@ -2718,26 +2621,9 @@ video {
     margin-top: 30px;
   }
 
-  .max-lg\:\!tw-h-fit {
-    height: -moz-fit-content !important;
-    height: fit-content !important;
-  }
-
-  .max-lg\:tw-h-auto {
-    height: auto;
-  }
-
   .max-lg\:tw-h-max {
     height: -moz-max-content;
     height: max-content;
-  }
-
-  .max-lg\:tw-min-h-\[400px\] {
-    min-height: 400px;
-  }
-
-  .max-lg\:tw-min-h-\[450px\] {
-    min-height: 450px;
   }
 
   .max-lg\:\!tw-w-\[160px\] {
@@ -2764,6 +2650,10 @@ video {
     place-content: center;
   }
 
+  .max-lg\:tw-gap-10 {
+    gap: 2.5rem;
+  }
+
   .max-lg\:tw-gap-5 {
     gap: 1.25rem;
   }
@@ -2775,11 +2665,6 @@ video {
   .max-lg\:\!tw-py-2 {
     padding-top: 0.5rem !important;
     padding-bottom: 0.5rem !important;
-  }
-
-  .max-lg\:tw-px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
   }
 
   .max-lg\:tw-text-4xl {
@@ -2833,21 +2718,8 @@ video {
     place-content: center;
   }
 
-  .max-md\:tw-gap-2 {
-    gap: 0.5rem;
-  }
-
   .max-md\:tw-gap-6 {
     gap: 1.5rem;
-  }
-
-  .max-md\:tw-p-6 {
-    padding: 1.5rem;
-  }
-
-  .max-md\:tw-px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
   }
 
   .max-md\:tw-text-2xl {
