--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -598,10 +598,6 @@ video {
   bottom: 0px;
 }
 
-.tw-bottom-14 {
-  bottom: 3.5rem;
-}
-
 .tw-left-0 {
   left: 0px;
 }
@@ -632,10 +628,6 @@ video {
 
 .tw-right-4 {
   right: 1rem;
-}
-
-.tw-right-\[20\%\] {
-  right: 20%;
 }
 
 .tw-top-0 {
@@ -884,10 +876,6 @@ video {
   height: 120px;
 }
 
-.tw-h-\[150px\] {
-  height: 150px;
-}
-
 .tw-h-\[180px\] {
   height: 180px;
 }
@@ -898,10 +886,6 @@ video {
 
 .tw-h-\[400px\] {
   height: 400px;
-}
-
-.tw-h-\[540px\] {
-  height: 540px;
 }
 
 .tw-h-\[60px\] {
@@ -925,6 +909,10 @@ video {
   height: 100vh;
 }
 
+.tw-max-h-\[650px\] {
+  max-height: 650px;
+}
+
 .tw-max-h-\[calc\(100vh-160px\)\] {
   max-height: calc(100vh - 160px);
 }
@@ -933,12 +921,16 @@ video {
   min-height: 100vh;
 }
 
-.tw-min-h-\[180px\] {
-  min-height: 180px;
-}
-
 .tw-min-h-\[300px\] {
   min-height: 300px;
+}
+
+.tw-min-h-\[60vh\] {
+  min-height: 60vh;
+}
+
+.tw-min-h-\[80vh\] {
+  min-height: 80vh;
 }
 
 .tw-min-h-\[90vh\] {
@@ -1009,10 +1001,6 @@ video {
   width: 120px;
 }
 
-.tw-w-\[150px\] {
-  width: 150px;
-}
-
 .tw-w-\[200px\] {
   width: 200px;
 }
@@ -1074,10 +1062,6 @@ video {
   max-width: 100vw;
 }
 
-.tw-max-w-\[1150px\] {
-  max-width: 1150px;
-}
-
 .tw-max-w-\[120px\] {
   max-width: 120px;
 }
@@ -1104,6 +1088,10 @@ video {
 
 .tw-max-w-\[850px\] {
   max-width: 850px;
+}
+
+.tw-max-w-\[95vw\] {
+  max-width: 95vw;
 }
 
 .tw-max-w-xl {
@@ -1213,10 +1201,6 @@ video {
 
 .tw-list-disc {
   list-style-type: disc;
-}
-
-.tw-auto-rows-auto {
-  grid-auto-rows: auto;
 }
 
 .tw-auto-rows-max {
@@ -1504,6 +1488,11 @@ video {
   border-top-color: transparent;
 }
 
+.\!tw-bg-\[\#17181B\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(23 24 27 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .\!tw-bg-transparent {
   background-color: transparent !important;
 }
@@ -1536,11 +1525,6 @@ video {
 .tw-bg-\[\#E94B64\] {
   --tw-bg-opacity: 1;
   background-color: rgb(233 75 100 / var(--tw-bg-opacity, 1));
-}
-
-.tw-bg-\[\#f6f7fb\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 247 251 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-\[\#fcfcfc\] {
@@ -1689,10 +1673,6 @@ video {
 
 .tw-p-1 {
   padding: 0.25rem;
-}
-
-.tw-p-10 {
-  padding: 2.5rem;
 }
 
 .tw-p-12 {
@@ -1877,11 +1857,6 @@ video {
   line-height: 1;
 }
 
-.tw-text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .tw-text-7xl {
   font-size: 4.5rem;
   line-height: 1;
@@ -1921,6 +1896,10 @@ video {
   line-height: 1rem;
 }
 
+.tw-text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
 .tw-font-bold {
   font-weight: 700;
 }
@@ -1933,8 +1912,12 @@ video {
   font-weight: 600;
 }
 
-.tw-uppercase {
-  text-transform: uppercase;
+.tw-font-light {
+  font-weight: 300;
+}
+
+.tw-italic {
+  font-style: italic;
 }
 
 .tw-ordinal {
@@ -1949,10 +1932,6 @@ video {
 
 .tw-leading-\[90px\] {
   line-height: 90px;
-}
-
-.tw-leading-normal {
-  line-height: 1.5;
 }
 
 .\!tw-text-black {
@@ -2097,6 +2076,16 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tw-shadow-\[rgba\(170\,49\,233\,0\.44021358543417366\)\] {
+  --tw-shadow-color: rgba(170,49,233,0.44021358543417366);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.tw-shadow-gray-700 {
+  --tw-shadow-color: #374151;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .tw-shadow-red-500\/50 {
@@ -2598,16 +2587,6 @@ video {
   border-color: rgb(233 75 100 / var(--tw-border-opacity, 1));
 }
 
-@media not all and (min-width: 1280px) {
-  .max-xl\:tw-flex {
-    display: flex;
-  }
-
-  .max-xl\:tw-flex-col {
-    flex-direction: column;
-  }
-}
-
 @media not all and (min-width: 1024px) {
   .max-lg\:tw-fixed {
     position: fixed;
@@ -2642,16 +2621,8 @@ video {
     width: 100%;
   }
 
-  .max-lg\:tw-max-w-full {
-    max-width: 100%;
-  }
-
   .max-lg\:tw-flex-col {
     flex-direction: column;
-  }
-
-  .max-lg\:tw-place-content-center {
-    place-content: center;
   }
 
   .max-lg\:tw-gap-10 {
@@ -2698,18 +2669,6 @@ video {
 }
 
 @media not all and (min-width: 768px) {
-  .max-md\:tw-hidden {
-    display: none;
-  }
-
-  .max-md\:tw-h-\[180px\] {
-    height: 180px;
-  }
-
-  .max-md\:tw-min-h-\[350px\] {
-    min-height: 350px;
-  }
-
   .max-md\:tw-w-full {
     width: 100%;
   }
@@ -2763,10 +2722,6 @@ video {
 @media (min-width: 768px) {
   .md\:tw-block {
     display: block;
-  }
-
-  .md\:tw-h-\[350px\] {
-    height: 350px;
   }
 
   .md\:tw-w-1\/2 {
